# Tetris

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  config-2.json  deploy-client.sh  run-game-server.sh  run-web-server.sh  test-server.sh  tetris.db
.cargo/: config.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: board.rs  lib.rs  main.rs  ui.rs
common/: Cargo.toml
common/src/: bag.rs  board.rs  config.rs  data.rs  lib.rs  protocol.rs
server/: Cargo.toml  config.json
server/src/: game_logic.rs  lib.rs  main.rs  net.rs  record.rs  score.rs  tests.rs
server/src/tests/: end_to_end.rs  multiplayer.rs  net.rs  rr.rs
server/test_data/: hard-drop-727.json  hard-drop-deterministic.json  hard-drop-hold-0.json  score-deterministic2.json  score-deterministic3.json  score-deterministic4.json
static/: client.js  config-3.json  index.html
templates/: base.html  lobbies.html  lobby_detail.html  login.html  online.html  signup.html  user_detail.html  users.html
web-server/: Cargo.toml  tetris.db
web-server/src/: auth.rs  db.rs  main.rs  routes.rs  seed.rs  tests.rs
