[workspace]
resolver = "3"
members = ["web-server", "client", "common", "server"]

# configuration that is shared among dependencies
[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Mehmet Emre"]
description = "CS 272 Milestone 2 Template"

# common dependencies
[workspace.dependencies]
axum = "0.8.8"
axum-login = "0.18.0"
bevy = { version = "0.18.0", default-features = false, features = ["bevy_color", "serialize"] }
getrandom = "0.4.2"
lightyear = { version = "0.26.4", features = ["websocket", "raw_connection", "replication", "netcode"] }
lightyear_netcode = "0.26.4"
minijinja = { version = "2.19.0", features = ["urlencode"] }
password-auth = "1.0.0"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full", "test-util"] }
tower = "0.5"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
