[package]
name = "client"
authors.workspace = true
description.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true, features = [
"2d",
"bevy_log",
] }
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = "0.1.7"
getrandom = { workspace = true, features = ["wasm_js"] }
lightyear = { workspace = true, features = ["client"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [ "Window", "Request", "RequestInit", "RequestMode", "Response", "console" ] }

[features]
test = ["bevy/bevy_ci_testing"]

[lints]
workspace = true